# Lab3

./: 3-aryTree.h  BinaryTree.h  Branch.h  Branch3.h  CMakeLists.txt  MenuBinaryTree.h  MenuFull.h  MenuTree3.h  Speed_Test.cpp  Speed_Test.h  main.cpp  test.cpp
